--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <script src="lib/ionic.filter.bar.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script src="lib/ng-cordova.min.js"></script>
-    <script src="js/app.bundle.min.js"></script>
+        <script src="js/app.bundle.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
 </head>
 <body ng-app="app">
 
