use all minfied version

--- a/index.html
+++ b/index.html
@@ -5,26 +5,13 @@
     <!--<meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; img-src 'self' data:">-->
     <meta http-equiv="Content-Security-Policy" content="default-src *; img-src 'self' * data:;script-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; *; style-src  &apos;self&apos; &apos;unsafe-inline&apos; *">
 
-    <title>Reading Log</title>
+    <title>ReadingLog App</title>
 
-    <link rel="stylesheet" href="css/ionic.app.min.css">
-    <link href="css/ionic.filter.bar.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/angular-chart.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/app.bundle.css">
+  <script src="lib/app.vendor.min.js"></script>
 
-    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
-    <script src="lib/firebase.js"></script>
-    <script src="lib/angularfire.min.js"></script>
-    <script src="lib/chart.min.js"></script>
-    <script src="lib/angular-chart.min.js"></script>
-    <script src="lib/moment.js"></script>
-    <script src="lib/ionic-ratings.min.js"></script>
-    <script src="lib/ion-timer.js"></script>
-    <script src="lib/templates.js"></script>
-    <script src="lib/ionic-datepicker.js"></script>
-    <script src="lib/ionic.filter.bar.min.js"></script>
-    <script src="js/app.bundle.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="favicon.png" />
+  <script src="js/app.bundle.min.js"></script>
+  <link rel="icon" type="image/x-icon" href="favicon.png" />
 </head>
 <body ng-app="app">
 
