--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <!--<meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; img-src 'self' data:">-->
     <meta http-equiv="Content-Security-Policy" content="default-src *; img-src 'self' * data:;script-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; *; style-src  &apos;self&apos; &apos;unsafe-inline&apos; *">
 
-    <title>ReadingLog App</title>
+    <title>Reading Log</title>
 
-  <link rel="stylesheet" href="css/app.bundle.css">
-  <script src="lib/app.vendor.min.js"></script>
+    <link rel="stylesheet" href="css/app.bundle.css">
 
-  <script src="js/app.bundle.min.js"></script>
-  <link rel="icon" type="image/x-icon" href="favicon.png" />
+    <script src="lib/app.vendor.min.js"></script>
+
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script src="lib/ng-cordova.min.js"></script>
+    <script src="js/app.bundle.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
 </head>
 <body ng-app="app">
 
